--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Miron . Asia</title>
+  <title>Miron & Asia</title>
   <link rel="stylesheet" href="css/styles.css?v=1.0">
 <style>
  body, html {
