--- a/nereczka/index.html
+++ b/nereczka/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plecak i Nerka</title>
+    <title>Nereczka</title>
+    <meta name="robots" content="noindex">
     <style>
         /* Styl dla całego ciała strony (różowe tło) */
         body {
@@ -21,8 +22,8 @@
 
         /* Styl dla nagłówka */
         h1 {
-            font-size: 2.5em;
-            margin-bottom: 20px;
+            font-size: 2em;
+            margin-bottom: 25px;
         }
 
         /* Styl dla przycisku */
@@ -35,6 +36,7 @@
             background-color: #ff69b4; /* Gorący róż */
             color: white;
             transition: background-color 0.3s ease;
+            margin-bottom: 25px;
         }
 
         /* Efekt najechania na przycisk */
@@ -58,6 +60,7 @@
  
         <button type="submit">Olowa Nereczka</button>
     </form>
+    <h3>Zapisz projekt i wyślij link na mejla Asi</h3>
 
 </body>
 </html>
